Tag spacing fixed along with rating, price, safety, service

--- a/reviews/app/assets/stylesheets/reviews.scss
+++ b/reviews/app/assets/stylesheets/reviews.scss
@@ -511,19 +511,47 @@ img{
     justify-content: space-between;
     &.right {
       text-align: right;
-      width: 25%;
+      width: 40%;
     }
     &.left {
       text-align: left;
-      width: 75%;
+      width: 60%;
     }
-    .structure-item {
-      display: inline-flex;
-      flex-grow: 1;
-    }
-    .structure-item2 {
-      max-width: fit-content;
-      flex-grow: 1;
+    .structure-split2 {
+    	display: flex;
+      flex-flow: row;
+    	width: 100%;
+        .structure-item {
+          display: flex;
+          flex-grow: 1;
+          display: inline-flex;
+          &.right {
+            text-align: right;
+          }
+          &.left {
+            text-align: left;
+          }
+          .sub-item {
+            display: flex;
+            width: 25%;
+            text-align: left;
+            padding-right: 3px;
+            padding-left: 5px;
+            flex-grow: 1;
+          }
+          .sub-item2 {
+            display: flex;
+            width: 50%;
+            justify-content: flex-start;
+
+            flex-grow: 1;
+          }
+        }
+        .structure-item2 {
+          max-width: fit-content;
+          flex-grow: 1;
+        }
+
     }
   }
 }
@@ -586,16 +614,18 @@ img{
   width: 100%;
   height: 100%;
 	padding: 20px;
-	justify-content: space-evenly;
+
   .sub-structure-3{
     display: flex;
-    justify-content: space-evenly;
+    justify-content: space-between;
     height: 100%;
     width: 100%;
 	 .sub-item {
-     display: inline-block;
+     display: flex;
+
+     justify-content: center;
      flex-grow: 1;
-		 justify-content: space-between;
+
 	  }
   }
 }
@@ -614,11 +644,7 @@ img{
 	width: 100%;
 }
 
-.structure-split2 {
-	display: flex;
-  flex-flow: row;
-	width: 100%;
-}
+
 
 .show-rating {
 	display: flex;
@@ -658,10 +684,9 @@ img{
 		  .show-sub-item {
         width: auto;
 				min-width: fit-content;
-        padding: 5px 20px 5px 0px;
+        padding: 5px 5px 5px 0px;
         font-size: 20px;
         color: #888888;
-        flex-grow: 1;
           img {
             height: auto;
             padding-top: 7px;
